--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -22,13 +22,9 @@
 	<div class="flex w-full my-5">
 		<img src="{{ asset(image_dir ~ 'home/catalogue.png') }}" alt="Catalogue Green Village" class="flex w-2/4 pr-5">
 		<div class="flex flex-col justify-center pl-5 w-2/4">
-			<p class="flex font-koulen text-center justify-center text-2xl w-full">OFFRES ET VENTES FLASH
-				<br>
-				NE RATEZ RIEN - VIVEZ VOTRE PASSION</p>
-			<div class="mb-6">
-				<label for="email" class="block mb-2 text-sm font-medium text-center mt-5">Inscription Newsletter</label>
-				<input type="email" id="email" class="border border-gray-500 text-sm rounded-lg focus:ring-gray-800 focus:border-gray-800 block w-full p-2.5" placeholder="john.doe@greenvillage.com" />
-			</div>
+			<p class="flex font-koulen text-center justify-center text-2xl w-full">OFFRES ET VENTES FLASH<br>NE RATEZ RIEN - VIVEZ VOTRE passion</p>
+			<label for="email" class="block mb-2 text-sm font-medium text-center mt-5">Inscription Newsletter</label>
+			<input type="email" id="email" class="border border-gray-500 text-sm rounded-lg focus:ring-gray-800 focus:border-gray-800 block w-full p-2.5" placeholder="john.doe@greenvillage.com"/>
 		</div>
 	</div>
 {% endblock %}
