--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,7 +40,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#" class="me-4 md:me-10 link_e">
+							<a href="{{ path('app_login') }}" class="me-4 md:me-10 link_e">
 								<p class="underline">&nbsp&nbsp&nbsp&nbspConnexion</p>
 							</a>
 						</li>
