--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
 		<title>
@@ -15,6 +15,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Kadwa:wght@400;700&family=Koulen&display=swap" rel="stylesheet">
 		{% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
 	</head>
@@ -40,7 +41,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="{{ path('app_login') }}" class="me-4 md:me-10 link_e">
+							<a href="#" class="me-4 md:me-10 link_e">
 								<p class="underline">&nbsp&nbsp&nbsp&nbspConnexion</p>
 							</a>
 						</li>
@@ -94,6 +95,7 @@
 			</footer>
 		</div>
 			{% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
 				{{ encore_entry_script_tags('app') }}
 				<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 				<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
