--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#" class="me-4 md:me-10 link_e">
+							<a href="{{ path('app_login') }}" class="me-4 md:me-10 link_e">
 								<p class="underline">&nbsp&nbsp&nbsp&nbspConnexion</p>
 							</a>
 						</li>
@@ -52,22 +52,22 @@
 			<footer class="bgnav text-gray-50 sticky top-[100vh] bottom-0 left-0 w-full p-4 shadow md:p-5 mix-blend-hard-light">
 				<ul class="md:mb-5 md:flex md:items-center md:justify-around flex flex-wrap items-center mt-3 text-sm font-medium sm:mt-0">
 					<li>
-						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_instagram.png') }}" alt="Green Village Instagram" class="socials size-10 h-auto max-w-full link_e"></a>
+						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_instagram.png') }}" alt="Green Village Instagram" class="socials size-10 h-auto max-w-full"></a>
 					</li>
 					<li>
-						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_pinterest.png') }}" alt="Green Village Pinterest" class="socials size-10 h-auto max-w-full link_e"></a>
+						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_pinterest.png') }}" alt="Green Village Pinterest" class="socials size-10 h-auto max-w-full"></a>
 					</li>
 					<li>
-						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_x.png') }}" alt="Green Village x" class="socials size-10 h-auto max-w-full link_e"></a>
+						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_x.png') }}" alt="Green Village x" class="socials size-10 h-auto max-w-full"></a>
 					</li>
 					<li>
-						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_youtube.png') }}" alt="Green Village Youtube" class="socials size-10 h-auto max-w-full link_e"></a>
+						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_youtube.png') }}" alt="Green Village Youtube" class="socials size-10 h-auto max-w-full"></a>
 					</li>
 					<li>
-						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_facebook.png') }}" alt="Green Village Facebook" class="socials size-10 h-auto max-w-full link_e"></a>
+						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_facebook.png') }}" alt="Green Village Facebook" class="socials size-10 h-auto max-w-full"></a>
 					</li>
 					<li>
-						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_linkedin.png') }}" alt="Green Village Linkedin" class="socials size-10 h-auto max-w-full link_e"></a>
+						<a href="#"><img src="{{ asset(image_dir ~ 'theme_v/socials/socials_linkedin.png') }}" alt="Green Village Linkedin" class="socials size-10 h-auto max-w-full"></a>
 					</li>
 				</ul>
 				<span class="md:mb-5 md:flex md:items-center md:justify-center text-sm sm:text-center w-full font-bold mix-blend-hard-light">© 2024 Green Village Inc. Tout droits réservés.
