--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -9,9 +9,9 @@
 	<p class="flex font-koulen justify-center text-4xl w-full my-5">NOS PRODUITS LES PLUS POPULAIRES</p>
 	<img src="{{ asset(image_dir ~ 'home/top_seller.png') }}" alt="Green Village Produit populaires" class="flex justify-center w-full">
 	<div class="flex w-full my-5">
-		<div class="pr-5">
-			<p class="flex font-koulen justify-center text-2xl">VOS AVIS COMPTENT !!</p>
-			<img src="{{ asset(image_dir ~ 'home/avis_commande.png') }}" alt="Green Village Avis commandes">
+		<div class="pr-5 flex flex-col w-2/4">
+			<p class="font-koulen text-center text-2xl ">VOS AVIS COMPTENT !!</p>
+			<img src="{{ asset(image_dir ~ 'home/avis_commande.png') }}" alt="Green Village Avis commandes" class="">
 		</div>
 		<img src="{{ asset(image_dir ~ 'home/option_paiement.png') }}" alt="Green Village Options de paiement" class="flex w-2/4 pl-5">
 	</div>
