--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="#" class="me-4 md:me-40 link_e">
+							<a href="{{ path('app_catalogue') }}" class="me-4 md:me-40 link_e">
 								<p class="underline">&nbsp&nbsp&nbsp&nbspCatalogue</p>
 							</a>
 						</li>
